--- a/style.css
+++ b/style.css
@@ -5,14 +5,16 @@ h2 {
     background-color: beige;
     text-align: center;
 }
-
-/* Add a black background color to the top navigation */
+body {
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
+}
+  
 .topnav {
-    background-color: #333;
     overflow: hidden;
-  }
+    background-color: #333;
+}
 
-/* Style the links inside the navigation bar */
 .topnav a {
     float: left;
     color: #f2f2f2;
@@ -20,16 +22,14 @@ h2 {
     padding: 14px 16px;
     text-decoration: none;
     font-size: 17px;
-  }
-  
-  /* Change the color of links on hover */
-  .topnav a:hover {
+}
+
+.topnav a:hover {
     background-color: #ddd;
     color: black;
-  }
-  
-  /* Add a color to the active/current link */
-  .topnav a.active {
+}
+
+.topnav a.active {
     background-color: #04AA6D;
     color: white;
-  }
+}
