--- a/style.css
+++ b/style.css
@@ -1,10 +1,12 @@
-h2 {
-    color: navy;
-    font-size: 70px;
-    margin: 0px;
-    background-color: beige;
-    text-align: center;
+h1 {
+	font-size: calc(2.8em + 2.6vw);
+	font-weight: 700;
+	letter-spacing: .01em;
+	padding: 10rem 0 0 4.5rem;
+	text-shadow: .022em .022em .022em #111;
+	color: #fff;
 }
+
 body {
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
