--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 h1 {
-	font-size: 80px;
-	font-weight: 700;
-	letter-spacing: .01em;
-	padding: 10rem 0 0 4.5rem;
-	text-shadow: .022em .022em .022em #111;
-	color: #fff;
+	float: left;
+    color: gray;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 80px;
 }
 
 body {
