Header font size and color.

--- a/style.css
+++ b/style.css
@@ -1,8 +1,7 @@
 h1 {
 	float: left;
     color: gray;
-    text-align: center;
-    padding: 14px 16px;
+    text-align: left;
     text-decoration: none;
     font-size: 80px;
 }
