--- a/style.css
+++ b/style.css
@@ -9,12 +9,12 @@ body {
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
 }
-  
+
+/*NAVIGATION BAR*/
 .topnav {
     overflow: hidden;
     background-color: #333;
 }
-
 .topnav a {
     float: left;
     color: #f2f2f2;
@@ -23,13 +23,33 @@ body {
     text-decoration: none;
     font-size: 17px;
 }
-
 .topnav a:hover {
     background-color: #ddd;
     color: black;
 }
-
 .topnav a.active {
     background-color: #04AA6D;
     color: white;
 }
+
+/*PAGE CONTENT*/
+* {
+    box-sizing: border-box;
+  }
+  .column {
+    float: left;
+    width: 50%;
+    padding: 5px;
+  }
+  /* Clearfix (clear floats) */
+  .row::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
+  /* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
+  @media screen and (max-width: 500px) {
+    .column {
+      width: 100%;
+    }
+  }
