--- a/style.css
+++ b/style.css
@@ -41,9 +41,15 @@ body {
     width: 50%;
     padding: 5px;
 }
-  /* Clearfix (clear floats) */
+/* Clearfix (clear floats) */
 .row::after {
     content: "";
     clear: both;
     display: table;
+}
+
+/*img sizing*/
+img1 {
+    width: 400px;
+    height: auto
 }
