--- a/style.css
+++ b/style.css
@@ -48,8 +48,11 @@ body {
     display: table;
 }
 
-/*img sizing*/
-img1 {
-    width: 100px;
-    height: auto
-}
+/*img formatting*/
+.imageFormat1 {
+    background-image: url("/image.jpg");
+    background-size: 150px;
+    width: 300px;
+    height: 300px;
+    border: solid 2px red;
+  }
