--- a/style.css
+++ b/style.css
@@ -7,7 +7,16 @@ h1 {
 
 body {
     margin: 0;
+    background: #555;
     font-family: Arial, Helvetica, sans-serif;
+}
+
+/*CENTER WEBSITE*/
+.content {
+    max-width: 500px;
+    margin: auto;
+    background: white;
+    padding: 10px;
 }
 
 /*NAVIGATION BAR*/
