--- a/style.css
+++ b/style.css
@@ -9,15 +9,22 @@ body {
     margin: 0;
     background: #555;
     font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
 }
+#page-wrap { 
+    position: absolute; 
+    left: 50%; 
+    width: 800px;
+    margin-left: -400px;
+  }
 
 /*CENTER WEBSITE*/
-.content {
+/*.content {
     max-width: 1500px;
     margin: auto;
     background: white;
     padding: 10px;
-}
+}*/
 
 /*NAVIGATION BAR*/
 .topnav {
